# omegaprompt

./: .gitattributes  .gitignore  AGENT_TRIGGERS.md  AUTHORS.md  CHANGELOG.md  EASY_README.md  EASY_README_KR.md  IP_DEFENSE_CHECKLIST.md  LICENSE  NOTICE  PRE_EXISTING_IP.md  README.md  README_KR.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  prompt_ci_regression.yml  provider_adapter.yml
.github/workflows/: ci.yml  omega-lock-compat.yml  publish.yml
benchmarks/: bench_calibration_concurrency.py
docs/: architecture.md  feature-2.1.0-ship-gate-and-formats.md  migration-from-omegaprompt.md  profiles-and-risk-boundaries.md  provider-capabilities.md  toolkit-positioning.md  trust-model.md
docs/claims/: README_CLAIMS.generated.md  public_claim_ledger.json
docs/demo/: omegaprompt-demo.en.srt
docs/release/: release-checklist.md  release-draft-template.md  scope-freeze.md
examples/: README.md  _demo_output.txt  demo_calibration.py  demo_replay.py  rubric_example.json  sample_dataset.jsonl  variants_example.json
examples/ci/: ship-gate.yml
examples/code_review/: README.md  backtest.py  backtest_results.json  backtest_results_gemma4.json  backtest_results_v2.json  backtest_results_v2_gemma4.json  backtest_results_v3.json  backtest_results_v3_gemma4.json  claude_full_validation_results.json  claude_validation_outputs.json  mainline_results.json  production_variant.json  quality_review.json  quality_review_claude_full.json  quality_review_mainline.json  quality_review_v2.json  quality_review_v3.json  rubric.json  score_and_write.py  test.jsonl  train.jsonl  validation_archive.json  variant_0_texts.txt  variant_1_texts.txt  variant_2_texts.txt  variant_3_texts.txt  variant_4_texts.txt  variants.json  variants_v2.json  variants_v3.json
examples/code_review/_mainline_outputs/: V0_baseline.txt  V1_role_terse.txt  V2_xml_format.txt  V3prime_rules_format.txt  V5_no_issue_guard.txt
examples/code_review/_subagent_outputs/: V0_baseline.txt  V1_role_terse.txt  V2_xml_format.txt  V3prime_rules_format.txt  V5_no_issue_guard.txt
examples/code_review/_subagent_prompts/: V0_baseline.txt  V1_role_terse.txt  V2_xml_format.txt  V3prime_rules_format.txt  V5_no_issue_guard.txt
examples/code_writing/: README.md  claude_results.json  quality_review.json  rubric.json  train.jsonl  variants.json
examples/code_writing/_subagent_outputs/: V0_baseline.txt  V1_role_terse.txt  V2_format.txt  V3prime_rules.txt  V4_guard.txt
examples/code_writing/_subagent_prompts/: V0_baseline.txt  V1_role_terse.txt  V2_format.txt  V3prime_rules.txt  V4_guard.txt
examples/commit_message/: README.md  claude_results.json  quality_review.json  rubric.json  train.jsonl  variants.json
examples/commit_message/_subagent_outputs/: V0_baseline.txt  V1_role_terse.txt  V2_format.txt  V3prime_rules.txt  V4_guard.txt
examples/commit_message/_subagent_prompts/: V0_baseline.txt  V1_role_terse.txt  V2_format.txt  V3prime_rules.txt  V4_guard.txt
examples/debugging/: README.md  claude_results.json  quality_review.json  rubric.json  train.jsonl  variants.json
examples/explanation/: README.md  claude_results.json  quality_review.json  rubric.json  train.jsonl  variants.json
examples/refactoring/: README.md  claude_results.json  quality_review.json  rubric.json  train.jsonl  variants.json
examples/reference/: README.md  golden_manifest.json  reference_adaptation_plan.json  reference_artifact.json  reference_diff_regression.json  reference_fail_hard_gates.json  reference_fail_kc4_gate.json  reference_preflight_report.json  reference_provider_degradation.json  reproduce_preflight_demo.py  reproduce_reference_artifact.py
examples/summarization/: README.md  claude_results.json  quality_review.json  rubric.json  train.jsonl  variants.json
examples/test_writing/: README.md  claude_results.json  quality_review.json  rubric.json  train.jsonl  variants.json
examples/translation/: README.md  claude_results.json  quality_review.json  rubric.json  train.jsonl  variants.json
src/omegacal/: __init__.py  __main__.py  cli.py
src/omegaprompt/: __init__.py  __main__.py  api.py  cli.py  dataset.py  fitness.py  judge.py  prompts.py  runtime.py  schema.py  target.py
tests/: helpers.py  test_action_yaml.py  test_adaptation_applied_vs_advisory.py  test_api.py  test_artifact_integrity.py  test_calibrate_integration.py  test_calibrate_tuning_concurrency.py  test_ci_workflow.py  test_claim_ledger.py  test_cli.py  test_cli_calibrate_runtime_parity.py  test_cli_diff_runtime_parity.py  test_core_without_mcp.py  test_dataset.py  test_demo_replay.py  test_determinism_replay.py  test_diff_status_gating.py  test_docs_claims.py  test_domain.py  test_fitness.py  test_gate.py  test_judge.py  test_judge_degradation.py  test_judges.py  test_markdown_links.py  test_mcp_contracts.py  test_mcp_execution.py  test_mcp_server.py  test_memoization.py  test_ollama_provider.py  test_omega_lock_contract.py  test_overfit.py  test_parallel_concurrency_bounded.py  test_parallel_determinism.py  test_parallel_exception_ordering.py  test_post_release_verify.py  test_preflight_adaptation.py  test_preflight_antemortem.py  test_preflight_contracts.py  test_preflight_mini_omega_lock.py  (+18 more)
tests/live/: test_provider_live_smoke.py
tools/: check_markdown_links.py  check_repo_consistency.py  generate_readme_claims.py  generate_release_draft.py  post_release_verify.py  publish_readiness.py  release_audit.py  reproduce_golden_reference.py  wheel_smoke.py
(+111 files in other folders)
