[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omegaprompt"
version = "2.0.0"
description = "Provider-neutral prompt calibration engine with sensitivity-ranked meta-axes, hard-gate x soft-score fitness, walk-forward ship gates, guarded/expedition profiles, and explicit capability/risk reporting across Anthropic, OpenAI, Gemini, and local OpenAI-compatible backends. Optional sub-tools (mini-omega-lock, mini-antemortem-cli) distribute separately and plug in via the omegaprompt.preflight interface."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "hibou04-ops" },
]
keywords = [
    "prompt-engineering",
    "prompt-calibration",
    "provider-neutral",
    "local-llm",
    "llm-as-judge",
    "walk-forward",
    "overfitting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "omega-lock>=0.1.4",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
# Slim installs for users who only need one vendor. Main 'dependencies'
# includes both so `pip install omegaprompt` works out of the box.
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
gemini = ["google-genai>=1.0.0"]
# MCP server: exposes the eight runtime entrypoints to MCP clients
# (Claude Code, Cursor, etc). Pulls the official MCP Python SDK.
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/hibou04-ops/omegaprompt"
Repository = "https://github.com/hibou04-ops/omegaprompt"
"Parent framework" = "https://github.com/hibou04-ops/omega-lock"
Methodology = "https://github.com/hibou04-ops/Antemortem"
Issues = "https://github.com/hibou04-ops/omegaprompt/issues"

[project.scripts]
omegacal = "omegacal.cli:app"
omegaprompt = "omegaprompt.cli:app"
omegaprompt-mcp = "omegaprompt.mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omegaprompt", "src/omegacal"]

[tool.hatch.build.targets.sdist]
include = [
    "src/omegaprompt",
    "src/omegacal",
    "README.md",
    "README_KR.md",
    "LICENSE",
    "NOTICE",
    "AUTHORS.md",
    "PRE_EXISTING_IP.md",
    "IP_DEFENSE_CHECKLIST.md",
    "AGENT_TRIGGERS.md",
    "CHANGELOG.md",
    "pyproject.toml",
    "examples",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = [
    "live: opt-in provider smoke tests that may call live APIs only when explicitly enabled",
]
